[package]
name = "olympus"
version = "0.0.0"
authors = ["Baphomat <baphomat@nickelange.studio>"]
edition = "2021"
description = "Olympus is a 3d game engine made in Rust focused on simplicity. More to come!"
keywords = ["3d", "engine", "simple", "gamedev", "graphics"]
categories = ["game-engines"]
repository = "https://github.com/NickelAngeStudio/olympus"
license = "MIT"


[features]
git_workflow = [] # Flag feature for GitHub Workflow.


[dependencies]



[package.metadata.docs.rs]
# Reference : https://stackoverflow.com/questions/61417452/how-to-get-a-feature-requirement-tag-in-the-documentation-generated-by-cargo-do
# Enable unstable features in the documentation
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
